--- a/trends/a4/view/index.html
+++ b/trends/a4/view/index.html
@@ -17,35 +17,54 @@
 
 function homeCtrl($scope, $http) {
   var socket = io();
-  $scope.status = "Connecting..."
+  $scope.status = "Waiting for other players..."
   $scope.hand = []
   $scope.mode = "pass"
+  $scope.playTwoClubs = false
   var cardsToPass = []
+  $scope.setHand = function(hand){
+    $scope.hand = hand.map(function(i, index){
+      i.imgName = i.description.toLowerCase()+"_of_"+i.suit.toLowerCase()+"s.svg";
+      i.show = true;
+      i.servIndex = index;
+      return i;
+    }).sort(function(a, b){
+      if((a.suit) == (b.suit)){
+        return (a.sort > b.sort) ? 1 : -1
+      }
+      return (a.suit > b.suit) ? 1 : -1;
+    })
+  }
   $scope.cardHit = function(card){
   	if($scope.mode == "pass"){
   		card.show = false;
   		cardsToPass.push(card)
   		if(cardsToPass.length >= 3){
-  			$scope.mode = "select"
   			$scope.status = "Wait for others..."
   			socket.emit("passCards", cardsToPass)
   		}
-  	}
+  	}else if($scope.mode == "play"){
+      if(($scope.playTwoClubs && card.sort == 2) || !$scope.playTwoClubs){
+        socket.emit("playCard", card)
+      }
+    }
   }
-
-  socket.on('gameStart', function(hand){
+  socket.on('receivePass', function(data){
+    $scope.setHand(data.hand)
+    console.log($scope.hand)
+    if(data.yourTurn){
+      $scope.playTwoClubs = true
+      $scope.status = "Your turn to play the 2 of clubs"
+      $scope.mode = "play"
+    }else{
+      $scope.status = "Wait for your turn"
+      $scope.mode = "wait"
+    }
+    $scope.$apply()
+  })
+  socket.on('gameStart', function(data){
   	$scope.status = "Click 3 cards to pass to left"
-  	$scope.hand = hand.map(function(i, index){
-  		i.imgName = i.description.toLowerCase()+"_of_"+i.suit.toLowerCase()+"s.svg";
-  		i.show = true;
-  		i.servIndex = index;
-  		return i;
-  	}).sort(function(a, b){
-  		if((a.suit) == (b.suit)){
-  			return (a.sort > b.sort) ? 1 : -1
-  		}
-  		return (a.suit > b.suit) ? 1 : -1;
-  	})
+  	$scope.setHand(data.hand)
   	console.log($scope.hand)
   	$scope.$apply()
   })
