--- a/trends/a4/view/layout.html
+++ b/trends/a4/view/layout.html
@@ -65,7 +65,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">CHAT <i style="font-size:1.0em" class="glyphicon glyphicon-tint"></i></a>
+          <a class="navbar-brand" href="/">Hearts <i style="font-size:1.0em" class="glyphicon glyphicon-tint"></i></a>
         </div>
         <div class="navbar-collapse collapse">
         	<!-- <ul class="nav navbar-nav">
