--- a/trends/a4/view/layout.html
+++ b/trends/a4/view/layout.html
@@ -27,6 +27,7 @@
     <!-- Custom styles for this template -->
 
     <script src="/public/vendor/jquery/jquery.js"></script>
+    <script src="/public/vendor/grem/grem.js"></script>
     <script src="/public/vendor/bootstrap/js/bootstrap.js"></script>
     <script src="/public/vendor/angular/angular.js"></script>
     <script src="/public/vendor/angular-encode-uri/angular-encode-uri.min.js"></script>
